--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3 class="section text-muted">Choose According To Your Rom</h3>
-          <div class="section-subheading text-muted">(Non-sar Build For Both Pie & non sar Android 10)</div>
-          <h3 class="section-subheading text-muted">(SAR Build For SAR Android 10)</h3>
-          <br><a class="btn btn-danger btn-xl js-scroll-trigger" href="https://www.pling.com/p/1317200/startdownload?file_id=1570547560&file_name=files&file_type=text/html;%20charset=utf-8&file_size=186274">Download</a>
+          <h3 class="section text-muted">Get The Lastest Build Of Stardust</h3>
+          <div class="section-subheading text-muted">(Builds Can Be Identified By: "Stardust-dd/mm/yy.zip"</div>
+          <h3 class="section-subheading text-muted">(And Build Date In About Phone)</h3>
+          <br><a class="btn btn-danger btn-xl js-scroll-trigger" href="https://www.pling.com/p/1317200/startdownload?file_id=1577368035&file_name=NON%20SAR&file_type=text/html;%20charset=utf-8&file_size=192260">Download</a>
         </div>
       </div>
     </div>
