Index: Update Download Link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h3 class="section text-muted">Get The Lastest Build Of Stardust</h3>
           <div class="section-subheading text-muted">(Builds Can Be Identified By: "Stardust-dd/mm/yy.zip"</div>
           <h3 class="section-subheading text-muted">(And Build Date In About Phone)</h3>
-          <br><a class="btn btn-danger btn-xl js-scroll-trigger" href="https://www.pling.com/p/1317200/startdownload?file_id=1577368035&file_name=NON%20SAR&file_type=text/html;%20charset=utf-8&file_size=192260">Download</a>
+          <br><a class="btn btn-danger btn-xl js-scroll-trigger" href="https://www.pling.com/p/1317200/#files-panel">Download</a>
         </div>
       </div>
     </div>
