--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead">
+  <header class="masthead" style="background-repeat: no-repeat; background-attachment: fixed;">
     <div class="container">
       <div class="intro-text">
         <div class="intro-heading ">Stardust</div>
