--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3 class="section text-muted">Get The Lastest Build Of Stardust</h3>
+          <h3 class="section text-muted">Get The Latest Build Of Stardust</h3>
           <div class="section-subheading text-muted">(Builds Can Be Identified By: "Stardust-dd/mm/yy.zip"</div>
           <h3 class="section-subheading text-muted">(And Build Date In About Phone)</h3>
           <br><a class="btn btn-danger btn-xl js-scroll-trigger" href="https://www.pling.com/p/1317200/#files-panel">Download</a>
